--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,72 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show it</title>
-    <link rel="shortcut icon" href="./../favicon.png">
+    <link rel="shortcut icon" href="./favicon.png">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="menu">
             <!--Este es el logo de la empresa, no tengo el editable aún-->
-            <img src="./../images/logos/show it blanco.png" alt="logo_show_it" width="60" height="60">
-            <ul>
-                <li>
-                <a href="./../index.html">Home</a>
-                </li>                    
-                <li>
-                    <a href="projects.html">Projects</a>
+            <img src="../images/logos/logo show it blanco.png" alt="logo_show_it" class="menu__logo">
+            <ul class="menu__lista">
+                <li class="menu__item">
+                    <a href="../index.html">Home</a>
                 </li>
-                <li>
-                    <a href="clients.html">Clients</a>
+                <li class="menu__item">
+                    <a href="./projects.html">Projects</a>
                 </li>
-                <li>
-                    <a href="about_us.html">About us</a>
+                <li class="menu__item">
+                    <a href="./clients.html">Clients</a>
                 </li>
-                <li>
-                    <a href="contact.html">Contact</a>
+                <li class="menu__item">
+                    <a href="./about_us.html">About us</a>
+                </li>
+                <li class="menu__item">
+                    <a href="./contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
-    </header>
-    <main>
-        <form action="">
-            <h2>CONTACT US</h2>
-            
-            <label for="name">Name:</label>
-            <input type="text" name="name" id="" placeholder="insert name">
-            <br>
-            <br>
-            <label for="last_name">Last name:</label>
-            <input type="text" name="last_name" id="" placeholder="insert lastname">
-            <br>
-            <br>
-            <label for="email">email:</label>
-            <input type="email" name="email" id="" placeholder="insert email">         
-            <br>
-            <br>
-            <fieldset>
-            <p>Writte your message</p>
-            <textarea name="Comments" id="" cols="30" rows="10"></textarea>
-            </fieldset>
-            <br>
-            <br>
-            <input type="checkbox" name="aceptar" id="">
-            <span>¿Do you want to subscribe to our newsletter?</span>
-            <br>
-            <br>
-            <input type="submit" value="submit" id="">
-            <input type="reset" value="reset" id="">
-            
-        </form>
-        <br>  
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3092.5275886808963!2d-106.81483368464109!3d39.18545907952731!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x180ccfe60a05dd4c!2zMznCsDExJzA3LjciTiAxMDbCsDQ4JzQ1LjUiVw!5e0!3m2!1ses!2sar!4v1636909088561!5m2!1ses!2sar" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </header> 
+    <main class="cuerpo-contact">
+        <section class="cuerpo-contact__title">
+            <h2 class="cuerpo-contact__title__contact">CONTACT</h2>
+            <h2 class="cuerpo-contact__title__us">US</h2>
+        </section>    
+        <form class="cuerpo-contact__cells">
+            <div class="cuerpo-contact__cells__content">
+                <input type="text" name="name" placeholder="insert name">
+                <input type="text" name="last_name" placeholder="insert last name">
+                <input type="email" name="email" placeholder="insert e-mail">
+            </div>
+            <div class="cuerpo-contact__text-area">
+                <p>Writte your message</p>
+                <textarea  name="Comments" id="" cols="30" rows="10"></textarea>
+                <div class="cuerpo-contact__text-area__buttons">
+                    <input type="submit" value="submit" id="">
+                    <input type="reset" value="reset" id="">
+                </div>
+            </div>
+        </form> 
     </main>
-    <footer>
-        <!--Me interesa que el footer este siempre fijo en cada page para que tengan la posibilidad de entrar a las redes en todo momento-->
-        <img src="./../images/logos/instagram.png" alt="instagram">
-        <a href="https://www.instagram.com/showit.worldwide/" target="blank" im><p>/@showit.worldwide</p></a>
-        <img src="../images/logos/facebook.png" alt="instagram">
-        <a href="https://www.facebook.com" target="blank" im><p>/facebook</p></a>
+    <footer class="pie">
+        <div class="pie__instagram">
+            <img src="../images/logos/instagram.png" alt="instagram">
+            <a href="https://www.instagram.com/showit.worldwide/" target="blank" im><p>/@showit.worldwide</p></a>
+        </div>
+        <div class="pie__facebook">    
+            <img src="../images/logos/facebook.png" alt="instagram">
+            <a href="https://www.facebook.com" target="blank" im><p>/facebook</p></a>
+        </div>
     </footer>
-
 </body>
 </html>
