cambios en about us y css

--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -34,10 +34,16 @@
     </header>
 
     <main>
-        <div class="cuerpo-about">
+        <section class="cuerpo-about">
+            <div class="cuerpo-about__title">
+                <h2 class="cuerpo-about__title__about">ABOUT</h2>
+                <h2 class="cuerpo-about__title__us">US</h2>
+            </div>
+            <div class="cuerpo-about__descripcion">
             <!--En esta parte se colocara una descripcion e historia de los integrantes de la empresa-->
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum dolorem quod ex voluptatum? Eum ad provident delectus quaerat nisi labore, architecto, et sed laudantium, accusamus quam cupiditate voluptatibus nulla consequatur?
-        </div>
+            </div>
+        </section>
     </main>
     <footer class="pie">
         <div class="pie__instagram">
