--- a/index.html
+++ b/index.html
@@ -8,57 +8,41 @@
     <link rel="shortcut icon" href="./favicon.png">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <header>
+<body class="body-index">
+    <header class="body__header">
         <nav class="menu">
-            <!--Este es el logo de la empresa, no tengo el editable aún-->
             <img src="./images/logos/logo show it blanco.png" alt="logo_show_it" class="menu__logo">
             <ul class="menu__lista">
-                <li class="menu__item">
-                    <a href="./index.html">Home</a>
-                </li>
-                <li class="menu__item">
-                    <a href="./pages/projects.html">Projects</a>
-                </li>
-                <li class="menu__item">
-                    <a href="./pages/clients.html">Clients</a>
-                </li>
-                <li class="menu__item">
-                    <a href="./pages/about_us.html">About us</a>
-                </li>
-                <li class="menu__item">
-                    <a href="./pages/contact.html">Contact</a>
-                </li>
+                <li class="menu__lista__item"><a href="./index.html">Home</a></li>
+                <li class="menu__lista__item"><a href="./pages/projects.html">Projects</a></li>
+                <li class="menu__lista__item"><a href="./pages/clients.html">Clients</a></li>
+                <li class="menu__lista__item"><a href="./pages/about_us.html">About us</a></li>
+                <li class="menu__lista__item"><a href="./pages/contact.html">Contact</a></li>
             </ul>
-        </nav>    
+        </nav>
     </header>
-    <main class="cuerpo-index">
-        <section class="cuerpo-index__1">
-            <section class="cuerpo-index__1__slogan">
-                <div class="cuerpo-index__1__slogan__showing"><h1>SHOWING</h1></div>
-                <div class="cuerpo-index__1__slogan__world"><h1>THE WORLD BEHIND</h1></div>
-                <div class="cuerpo-index__1__slogan__your"><h1>YOUR</h1></div>
-                <div class="cuerpo-index__1__slogan__brand"><h1>BRAND</h1></div>
-                    
-            </section>
-            <section class="cuerpo-index__1__video">
-                <video src="./videos/FinalVideo_1633406884.557227.mov" autoplay muted loop></video>
-            </section>
+    <main class="body-index__main">
+        <section class="cuerpo-index__slogan">
+            <div class="cuerpo-index__slogan__1"><h2>SHOWING</h2></div>
+            <div class="cuerpo-index__slogan__2"><h2>THE WORLD BEHIND</h2></div>
+            <div class="cuerpo-index__slogan__3"><h2>YOUR</h2></div>
+            <div class="cuerpo-index__slogan__4"><h2>BRAND</h2></div>
+            <div class="cuerpo-index__descripcion"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsam est voluptates, inventore illum quibusdam obcaecati dolores suscipit deleniti nemo et ratione asperiores magni distinctio mollitia blanditiis totam reiciendis natus.</p></div>
         </section>
-        <section class="descripcion">
-            <div class="descripcion__caja"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga officiis consequatur facere nesciunt aut perferendis iusto enim obcaecati quod sapiente rem id, eos nostrum animi dolorem debitis placeat eligendi exercitationem?</p></div>
+        <section class="cuerpo-index__video">
+            
+            <video src="./videos/FinalVideo_1633406884.557227.mov" autoplay muted loop width="650px" height="650px"></video>
         </section>
     </main>
-
-    <footer class="pie">
-        <div class="pie__instagram">
+    <footer class="body__footer">
+        <div class="footer__instagram">
             <img src="./images/logos/instagram.png" alt="instagram">
             <a href="https://www.instagram.com/showit.worldwide/" target="blank" im><p>/@showit.worldwide</p></a>
         </div>
-        <div class="pie__facebook">    
+        <div class="footer__facebook">    
             <img src="./images/logos/facebook.png" alt="instagram">
             <a href="https://www.facebook.com" target="blank" im><p>/facebook</p></a>
         </div>
-    </footer>  
+    </footer>
 </body>
 </html>
